--- a/components/modal/index.html
+++ b/components/modal/index.html
@@ -119,5 +119,16 @@
             </button>
         </div>
         <button id="ext-start-chat-button">Start Chat (Enter)</button>
+        <div
+            id="extension-delete-list-item-div"
+            class="ext-delete-list-item-div"
+        >
+            <button
+                id="extension-delete-list-item-button"
+                class="ext-delete-list-item-button"
+            >
+                Delete
+            </button>
+        </div>
     </div>
 </div>
