--- a/components/modal/styles.css
+++ b/components/modal/styles.css
@@ -73,13 +73,36 @@
     border-radius: 10px;
     border: 1px solid #2da2d4;
     position: relative;
-    padding: 18px 20px 10px 20px;
+    padding: 9px 0 0 0;
     height: 200px;
     margin: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.ext-list-holder {
+    overflow: auto;
+    flex-grow: 1;
+    padding: 8px 20px 0 20px;
+    scrollbar-color: #8a8a8a #e2e2e2;
 }
 
 #ext-prompt-box {
     margin-top: 0;
+}
+
+#extension-sign-in-arrow {
+    position: absolute;
+    right: 57px;
+    top: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.extension-sign-in-notif {
+    color: white;
+    font-size: 18px;
 }
 
 #ext-start-chat-button {
@@ -116,7 +139,7 @@
     top: -1px;
     transform: translateY(-50%);
     background-color: #efefef;
-    padding: 3px;
+    padding: 0 3px 0 3px;
     border: none !important;
     outline: none !important;
 }
@@ -127,7 +150,7 @@
     top: -1px;
     transform: translateY(-50%);
     background-color: #efefef;
-    padding: 3px;
+    padding: 0 3px 0 3px;
     border: none !important;
     outline: none !important;
 }
