one guy down fr fr

--- a/components/modal/index.html
+++ b/components/modal/index.html
@@ -76,12 +76,12 @@
                 </svg>
             </button>
             <div id="extension-context-list-holder" class="ext-list-holder">
-                <div id="extension-context-list-item" class="ext-list-item">
+                <button id="extension-context-list-item" class="ext-list-item">
                     <div class="ext-list-dot-div">
-                        <button class="ext-list-dot"></button>
+                        <div class="ext-list-dot"></div>
                     </div>
                     <textarea rows="1" class="ext-list-text-area"></textarea>
-                </div>
+                </button>
                 <button
                     id="extension-context-place-holder"
                     class="ext-place-holder"
