--- a/components/modal/index.html
+++ b/components/modal/index.html
@@ -1,4 +1,8 @@
 <div id="extension-modal-background" class="ext-modal">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet"
+    />
     <div id="extension-modal" class="ext-modal-content">
         <div class="ext-modal-header">
             <div class="ext-modal-button-left">
@@ -119,6 +123,50 @@
                     </g>
                 </svg>
             </button>
+            <button id="extension-prompt-check-button" class="ext-check-button">
+                <svg
+                    height="18px"
+                    width="18px"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g
+                        id="SVGRepo_tracerCarrier"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                    ></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <g id="Interface / Check_Big">
+                            <path
+                                id="Vector"
+                                d="M4 12L8.94975 16.9497L19.5572 6.34326"
+                                stroke="#3582a3"
+                                stroke-width="1.512"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                            ></path>
+                        </g>
+                    </g>
+                </svg>
+            </button>
+            <div id="extension-prompt-list-holder" class="ext-list-holder">
+                <button id="extension-prompt-list-item" class="ext-list-item">
+                    <div class="ext-list-dot-div">
+                        <div class="ext-list-dot"></div>
+                    </div>
+                    <textarea rows="1" class="ext-list-text-area"></textarea>
+                </button>
+                <button
+                    id="extension-prompt-place-holder"
+                    class="ext-place-holder"
+                >
+                    <div class="ext-list-dot-div">
+                        <div class="ext-list-dot-dotted"></div>
+                    </div>
+                </button>
+            </div>
         </div>
         <button id="ext-start-chat-button">Start Chat (Enter)</button>
         <div
