--- a/components/modal/index.html
+++ b/components/modal/index.html
@@ -21,6 +21,64 @@
                 </button>
             </div>
         </div>
+        <div id="extension-extra-box" class="ext-extra-body">
+            <p class="ext-context-text">Extra</p>
+            <div
+                id="extension-extra-text-selection-box"
+                class="ext-extra-text-selection-box"
+            >
+                <button
+                    id="extension-extra-text-selection-cancel"
+                    class="ext-extra-text-selection-cancel"
+                >
+                    <svg
+                        viewBox="0 0 32 32"
+                        xmlns="http://www.w3.org/2000/svg"
+                        fill="#000000"
+                        height="15px"
+                        width="15px"
+                    >
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g
+                            id="SVGRepo_tracerCarrier"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                        ></g>
+                        <g id="SVGRepo_iconCarrier">
+                            <defs>
+                                <style>
+                                    .cls-1 {
+                                        fill: none;
+                                        stroke: #5c5c5c;
+                                        stroke-linecap: round;
+                                        stroke-linejoin: round;
+                                        stroke-width: 2px;
+                                    }
+                                </style>
+                            </defs>
+                            <title></title>
+                            <g id="cross">
+                                <line
+                                    class="cls-1"
+                                    x1="7"
+                                    x2="25"
+                                    y1="7"
+                                    y2="25"
+                                ></line>
+                                <line
+                                    class="cls-1"
+                                    x1="7"
+                                    x2="25"
+                                    y1="25"
+                                    y2="7"
+                                ></line>
+                            </g>
+                        </g>
+                    </svg>
+                </button>
+                <p class="extension-extra-text-p">Text Selection</p>
+            </div>
+        </div>
         <div id="ext-context-box" class="ext-modal-body">
             <p class="ext-context-text">Context</p>
             <button id="extension-context-edit-button" class="ext-edit-button">
