Initial prototype done

--- a/components/modal/styles.css
+++ b/components/modal/styles.css
@@ -96,10 +96,10 @@
     border-radius: 10px;
     border: 1px solid #1f1f1f;
     margin-left: 20px;
-    height: 20px;
+    height: 30px;
     display: flex;
     align-items: center;
-    padding: 15px 8px;
+    padding: 0 8px 0 8px;
 }
 
 .extension-extra-text-p {
@@ -107,7 +107,7 @@
     font-size: 13px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    margin-left: 6px;
+    margin: 0px 0px 0px 6px;
 }
 
 .ext-list-holder {
@@ -292,4 +292,31 @@
 
 .ext-text-bold {
     font-weight: bold;
+}
+
+.ext-yt-loading-spinner {
+    border: 1px solid #efefef;
+    border-radius: 50%;
+    border-top: 1px solid #3498db;
+    width: 15px;
+    height: 15px;
+    animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.ext-extra-text-selection-cancel {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    background: transparent;
+    line-height: 0;
 }
